--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
               Information Technology at HoGent.
               I am tranquil and motivated 17-year-old programmer with a wide range of skills and technical interests.
               When
-              I’m not coding and tinkering away, one can find me in other hobbies like running, reading, learning, chess,
+              I’m not coding and tinkering away, one can find me in other hobbies like running, reading, learning,
+              chess,
               gaming.
             </p>
             <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
@@ -170,7 +171,8 @@
                 Information Technology at HoGent.
                 I am tranquil and motivated 17-year-old programmer with a wide range of skills and technical interests.
                 When
-                I’m not coding and tinkering away, one can find me in other hobbies like running, reading, learning, chess,
+                I’m not coding and tinkering away, one can find me in other hobbies like running, reading, learning,
+                chess,
                 gaming.
               </p>
             </div>
@@ -400,67 +402,71 @@
             <p>What am I able to offer</p>
           </div>
 
-          <div class="row">
-            <div class="col-lg-4 col-md-6">
-              <div class="icon-box" data-aos="zoom-in-left">
-                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
-                <h4 class="title"><a href="">Creating a website for your business</a></h4>
-                <p class="description">Thinking of getting a website for your business? You are at the right place. Here
-                  you can choose from 3 packages according to your needs. The sites will be unique, mobile-friendly, SEO
-                  optimized and trendy.
-                  <br> <br>
-                  The price of basic webpage starts with $300 only. That means if you want a site with 5-6 pages,
-                  minimum cost will be $300 only.
-                  <br> <br>
-                  Note: for specially customized designs and functionality like purchasing online, registration etc the
-                  price will vary. Please message me to discuss further.</p>
-              </div>
+          <div class="col-lg col-md">
+            <div class="icon-box" data-aos="zoom-in-left">
+              <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
+              <h4 class="title"><a href="">Creating a website for your business</a></h4>
+              <p class="description">Thinking of getting a website for your business? You are at the right place. Here
+                you can choose from 3 packages according to your needs. The sites will be unique, mobile-friendly, SEO
+                optimized and trendy.
+                <br> <br>
+                The price of basic webpage starts with $300 only. That means if you want a site with 5-6 pages,
+                minimum cost will be $300 only.
+                <br> <br>
+                Note: for specially customized designs and functionality like purchasing online, registration etc the
+                price will vary. Please message me to discuss further.</p>
             </div>
-            <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
-              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
-                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
-                <h4 class="title"><a href="">Graphic & Design</a></h4>
-                <p class="description">I’ll professionally design a logo for your business, with multiple concepts and
-                  revisions until your brand vision is complete.</p>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
-              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
-                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
-                <h4 class="title"><a href="">Video & Animation (Still learning)</a></h4>
-                <p class="description">I can edit videos for your business.
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mt-5">
-              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="300">
-                <!-- <div class="icon"><i class="las la-list" style="color:#000000;"></i></div> -->
-                <h4 class="title"><a href="">Music & Audio (Still learning)</a></h4>
-                <p class="description">If you're looking a beat for a radio hit, background music for your video, or a
-                  track for other commercial purposes, you came to the right place.</p>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mt-5">
-              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="400">
-                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
-                <h4 class="title"><a href="">Programming & Tech (Still learning)</a></h4>
-                <p class="description">If you have java, javascript Programming Projects that are holding you back
-                  from other pieces of work, you came to the right place.</p>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mt-5">
-              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="500">
-                <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
-                <h4 class="title"><a href="">Other (Still learning)</a></h4>
-                <p class="description">...</p>
-              </div>
+          </div>
+          
+          <div class="col-lg col-md">
+            <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
+              <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
+              <h4 class="title"><a href="">Graphic & Design</a></h4>
+              <p class="description">I’ll professionally design a logo for your business, with multiple concepts and
+                revisions until your brand vision is complete.</p>
             </div>
           </div>
 
+          <div class="col-lg col-md">
+
+            <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
+              <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
+              <h4 class="title"><a href="">Video & Animation (Still learning)</a></h4>
+              <p class="description">I can edit videos for your business.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg col-md">
+            <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="300">
+              <!-- <div class="icon"><i class="las la-list" style="color:#000000;"></i></div> -->
+              <h4 class="title"><a href="">Music & Audio (Still learning)</a></h4>
+              <p class="description">If you're looking a beat for a radio hit, background music for your video, or a
+                track for other commercial purposes, you came to the right place.</p>
+            </div>
+          </div>
+
+          <div class="col-lg col-md">
+            <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="400">
+              <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
+              <h4 class="title"><a href="">Programming & Tech (Still learning)</a></h4>
+              <p class="description">If you have java, javascript Programming Projects that are holding you back
+                from other pieces of work, you came to the right place.</p>
+            </div>
+          </div>
+
+          <div class="col-lg col-md">
+            <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="500">
+              <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
+              <h4 class="title"><a href="">Other (Still learning)</a></h4>
+              <p class="description">...</p>
+            </div>
+          </div>
+
+
         </div>
-      </section><!-- End Services Section -->
+      </section>
+      <!-- End Services Section -->
 
       <!-- ======= Work Section ======= -->
       <section id="work" class="work">
