--- a/index.html
+++ b/index.html
@@ -406,15 +406,33 @@
             <div class="icon-box" data-aos="zoom-in-left">
               <!-- <div class="icon"><i class="las la-list" style="color: #000000;"></i></div> -->
               <h4 class="title"><a href="">Creating a website for your business</a></h4>
-              <p class="description">Thinking of getting a website for your business? You are at the right place. Here
-                you can choose from 3 packages according to your needs. The sites will be unique, mobile-friendly, SEO
-                optimized and trendy.
-                <br> <br>
-                The price of basic webpage starts with $300 only. That means if you want a site with 5-6 pages,
-                minimum cost will be $300 only.
-                <br> <br>
+              <p class="description">
+                Thinking of getting a website for your business? You are at the right place. Here you can choose from 3
+                packages according to your needs. The sites will be unique, mobile-friendly, SEO optimized and trendy.
+                <br><br>
+                The price of basic webpage starts with $300 only. That means if you want a site with 5-6 pages, minimum
+                cost will be $300 only.
+                <br><br>
                 Note: for specially customized designs and functionality like purchasing online, registration etc the
-                price will vary. Please message me to discuss further.</p>
+                price will vary. Please message me to discuss further.
+                <br><br>
+                <!--  
+                Features:
+                <li>Premium design</li>
+                <li>Responsive</li>
+                <li>SEO friendly</li>
+                <li>Editable</li>
+                <li>Animations of your choices</li>
+                <li>Royalty-free stock photo</li>
+                <li>Unlimited revisions</li> 
+                -->
+
+                <br><br>
+                If you have any sample design, just let me know. If you do not, just relax and let me awe you with my
+                work. Unlimited revisions mean I keep working till you are happy with the site. I believe in long term
+                business so you will have my support at any time. Just message me to take a look at my previous works or
+                for a custom quotation.
+              </p>
             </div>
           </div>
 
